rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q860_2000_GAT-PDU.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q860_2000_GAT-PDU.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve argument Components of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype Components of parameterized implementation.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod gat_pdu {
    extern crate alloc;
    use super::addressing_data_elements::PartyNumber;
    use super::facility_information_element_components::Components;
    use super::interpretation_component::InterpretationComponent;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct AddressInformation(pub PartyNumber);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct EntityType(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(tag(context, 10))]
    pub struct GATNetworkFacilityExtension {
        #[rasn(tag(context, 0), identifier = "sourceEntity")]
        pub source_entity: EntityType,
        #[rasn(tag(context, 1), identifier = "sourceEntityAddress")]
        pub source_entity_address: Option<AddressInformation>,
        #[rasn(tag(context, 2), identifier = "destinationEntity")]
        pub destination_entity: EntityType,
        #[rasn(tag(context, 3), identifier = "destinationEntityAddress")]
        pub destination_entity_address: Option<AddressInformation>,
    }
    impl GATNetworkFacilityExtension {
        pub fn new(
            source_entity: EntityType,
            source_entity_address: Option<AddressInformation>,
            destination_entity: EntityType,
            destination_entity_address: Option<AddressInformation>,
        ) -> Self {
            Self {
                source_entity,
                source_entity_address,
                destination_entity,
                destination_entity_address,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct LocalValueDiscriminator(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ServiceIndicator(pub ObjectIdentifier);
}
