rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q932_1998-Amd1_Facility-Information-Element-Components.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q932_1998-Amd1_Facility-Information-Element-Components.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 29, column 2]
    │
    │ 
 29 │  (CONSTRAINED BY { -- must conform to the above definition --} ! ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 30 │   RejectProblem:general-unrecognizedPDU)
    │
────╯
