rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q932_1998-Amd1_Interpretation-component.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q932_1998-Amd1_Interpretation-component.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod interpretation_component {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated, tag(context, 11))]
    pub enum InterpretationComponent {
        discardAnyUnrecognisedInvokePdu = 0,
        clearCallIfAnyInvokePduNotRecognised = 1,
        rejectAnyUnrecognisedInvokePdu = 2,
    }
}
