rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q932_1998-Amd1_Network-Protocol-Profile-component.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q932_1998-Amd1_Network-Protocol-Profile-component.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod network_protocol_profile_component {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, tag(context, 18), value("0..=254"))]
    pub struct NetworkProtocolProfile(pub u8);
}
